SubBt/force-app/main/default/objects/Schedule_of_Values__c/Schedule_of_Values__c.object-meta.xml
<CustomObject>
    <label>Schedule of Values</label>
    <nameField>
        <label>Schedule of Values Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule of Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>