SubBt/force-app/main/default/objects/Schedule_of_Values__c/fields/Created_SOV_Line_Ids_From_Project__c.field-meta.xml
<CustomField>
    <fullName>Created_SOV_Line_Ids_From_Project__c</fullName>
    <label>Created SOV Line Ids From Project</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>