SubBt/force-app/main/default/objects/Schedule_of_Values__c/fields/GC_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>GC_Approved_Date__c</fullName>
    <label>GC Approved Date</label>
    <type>DateTime</type>
</CustomField>