SubBt/force-app/main/default/objects/Schedule_of_Values__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Schedule of Values</relationshipLabel>
    <relationshipName>Schedule_of_Values</relationshipName>
    <type>Lookup</type>
</CustomField>