SubBt/force-app/main/default/objects/Schedule_of_Values__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Company Submitted</fullName>
            </value>
            <value>
                <fullName>Vendor Submitted</fullName>
            </value>
            <value>
                <fullName>Company Rejected</fullName>
            </value>
            <value>
                <fullName>Company Approved</fullName>
            </value>
            <value>
                <fullName>Customer Rejected</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Partially Rejected</fullName>
                <isActive>false</isActive>
                <label>Partially Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>