SubBt/force-app/main/default/objects/Schedule_of_Values__c/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <label>Total Costs</label>
    <summarizedField>Schedule_of_Value_Lines__c.Scheduled_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Schedule_of_Value_Lines__c.isConsolidated__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Schedule_of_Value_Lines__c.Schedule_of_Values__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>