SubBt/force-app/main/default/objects/Schedule_of_Values__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schedule of Values</relationshipLabel>
    <relationshipName>Schedule_of_Values</relationshipName>
    <type>Lookup</type>
</CustomField>