SubBt/force-app/main/default/objects/Schedule_of_Values__c/fields/Vendor_Total_CostsTotal_Costs__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Total_CostsTotal_Costs__c</fullName>
    <description>This Field is used for the community, to show the vendor total costs.</description>
    <label>Total Costs</label>
    <summarizedField>Schedule_of_Value_Lines__c.Vendor_Scheduled_Value__c</summarizedField>
    <summaryForeignKey>Schedule_of_Value_Lines__c.Schedule_of_Values__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>