SubBt/force-app/main/default/objects/Schedule_of_Values__c/validationRules/Make_Project_Required_For_Community.validationRule-meta.xml
<ValidationRule>
    <fullName>Make_Project_Required_For_Community</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
ISBLANK(Project__c),
ISPICKVAL(Status__c , &quot;Vendor Submitted&quot;),
(ISCHANGED( Status__c )))</errorConditionFormula>
    <errorMessage>Project Is Required</errorMessage>
</ValidationRule>