SubBt/force-app/main/default/objects/Schedule_of_Values__c/validationRules/Prevent_Update_when_vendor_submitted_sov.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Update_when_vendor_submitted_sov</fullName>
    <active>false</active>
    <description>You cannot edit the record once the SOV is submitted for Review</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
OR(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Vendor Submitted&quot;),ISPICKVAL(PRIORVALUE(Status__c) , &quot;Company Approved&quot;),
AND(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Vendor Submitted&quot;),(ISCHANGED( Status__c ))))
)</errorConditionFormula>
    <errorMessage>You cannot edit the record, once the SOV is submitted or Company Approved</errorMessage>
</ValidationRule>