SubBt/force-app/main/default/objects/Schedule_of_Values__c/validationRules/Restrict_Sov_From_edit_when_status_is_CA.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Sov_From_edit_when_status_is_CA</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
NOT(ISNEW()),
AND(ISPICKVAL(PRIORVALUE(Status__c) , &quot;Company Approved&quot;),ISCHANGED( Status__c ) ))</errorConditionFormula>
    <errorDisplayField>Created_SOV_Line_Ids_From_Project__c</errorDisplayField>
    <errorMessage>You cannot edit the record, once the SOV is Company Approved</errorMessage>
</ValidationRule>