SubBt/force-app/main/default/objects/Schedule_of_Values__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Total_Costs__c</columns>
    <columns>Vendor__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>